Fixes issue with search selection tabindex, fix z-index of selection dropdown icon when autocomplete

--- a/src/definitions/modules/dropdown.less
+++ b/src/definitions/modules/dropdown.less
@@ -379,6 +379,7 @@ select.ui.dropdown {
   position: absolute;
   top: auto;
   width: auto;
+  z-index: @selectionIconZIndex;
   margin: @selectionIconMargin;
   padding: @selectionIconPadding;
   right: @selectionHorizontalPadding;
